--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,10 +24,10 @@ dependencies:
   flutter:
     sdk: flutter
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  route_transitions:
+  flutter_svg:
+  intl_phone_field: ^1.2.0
 
 dev_dependencies:
   flutter_test:
@@ -39,10 +39,11 @@ dev_dependencies:
 # The following section is specific to Flutter.
 flutter:
 
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
+
   uses-material-design: true
+
+  assets:
+    - images/
 
   fonts:
     - family: Pacifico
